--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/joakimbengtson/strecket-server#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "commander": "^2.9.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
-    "mysql": "^2.12.0"
+    "mysql": "^2.12.0",
+    "yow": "^1.0.26"
   }
 }
