--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "mysql": "^2.12.0",
+    "node-schedule": "^1.2.0",
     "twilio": "^2.11.1",
     "yahoo-finance": "^0.2.14",
     "yow": "^1.0.26"
